Adjust views with model changes

--- a/PartsInParcels/PartsInParcels.csproj
+++ b/PartsInParcels/PartsInParcels.csproj
@@ -204,6 +204,10 @@
     <Compile Include="Migrations\201710302252363_AddImageProperty.Designer.cs">
       <DependentUpon>201710302252363_AddImageProperty.cs</DependentUpon>
     </Compile>
+    <Compile Include="Migrations\201710302305167_RemoveWeightProp.cs" />
+    <Compile Include="Migrations\201710302305167_RemoveWeightProp.Designer.cs">
+      <DependentUpon>201710302305167_RemoveWeightProp.cs</DependentUpon>
+    </Compile>
     <Compile Include="Migrations\Configuration.cs" />
     <Compile Include="Models\AccountViewModels.cs" />
     <Compile Include="Models\IdentityModels.cs" />
@@ -297,6 +301,9 @@
     </EmbeddedResource>
     <EmbeddedResource Include="Migrations\201710302252363_AddImageProperty.resx">
       <DependentUpon>201710302252363_AddImageProperty.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="Migrations\201710302305167_RemoveWeightProp.resx">
+      <DependentUpon>201710302305167_RemoveWeightProp.cs</DependentUpon>
     </EmbeddedResource>
   </ItemGroup>
   <PropertyGroup>
