--- a/PartsInParcels/PartsInParcels.csproj
+++ b/PartsInParcels/PartsInParcels.csproj
@@ -219,6 +219,7 @@
   <ItemGroup>
     <Content Include="Content\bootstrap.css" />
     <Content Include="Content\bootstrap.min.css" />
+    <Content Include="Content\images\pig.png" />
     <Content Include="Content\materialize.css" />
     <Content Include="favicon.ico" />
     <Content Include="fonts\glyphicons-halflings-regular.svg" />
