--- a/PartsInParcels/PartsInParcels.csproj
+++ b/PartsInParcels/PartsInParcels.csproj
@@ -219,7 +219,10 @@
   <ItemGroup>
     <Content Include="Content\bootstrap.css" />
     <Content Include="Content\bootstrap.min.css" />
+    <Content Include="Content\images\icon.ico" />
     <Content Include="Content\images\pig.png" />
+    <Content Include="Content\images\prosciutto di parma.jpg" />
+    <Content Include="Content\images\prosciutto.jpg" />
     <Content Include="Content\materialize.css" />
     <Content Include="favicon.ico" />
     <Content Include="fonts\glyphicons-halflings-regular.svg" />
