add minified materialize and adjust budlesconfig

--- a/PartsInParcels/PartsInParcels.csproj
+++ b/PartsInParcels/PartsInParcels.csproj
@@ -221,19 +221,15 @@
     <Compile Include="Startup.cs" />
   </ItemGroup>
   <ItemGroup>
-    <Content Include="Content\bootstrap.css" />
-    <Content Include="Content\bootstrap.min.css" />
     <Content Include="Content\images\icon.ico" />
     <Content Include="Content\images\pig.png" />
     <Content Include="Content\images\prosciutto di parma.jpg" />
     <Content Include="Content\images\prosciutto.jpg" />
-    <Content Include="Content\materialize.css" />
+    <Content Include="Content\materialize.min.css" />
     <Content Include="favicon.ico" />
     <Content Include="fonts\glyphicons-halflings-regular.svg" />
     <Content Include="Global.asax" />
     <Content Include="Content\Site.css" />
-    <Content Include="Scripts\bootstrap.js" />
-    <Content Include="Scripts\bootstrap.min.js" />
     <Content Include="ApplicationInsights.config">
       <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
     </Content>
